language/move-lang/tests/move_check/parser/struct_native_resource.move
module M {
    // The "native" keyword is expected before the "resource" keyword.
    resource native struct S;
}
